test/corpus/functions.txt
================================================================================
Function call no args
================================================================================

now()

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)))

================================================================================
Function call single arg
================================================================================

count(items)

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (identifier)))

================================================================================
Function call multiple args
================================================================================

coalesce(a, b, c)

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (identifier)
    (identifier)
    (identifier)))

================================================================================
Order function with asc
================================================================================

order(name asc)

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (asc_expression
      expression: (identifier))))

================================================================================
Order function with desc
================================================================================

order(releaseYear desc)

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (desc_expression
      expression: (identifier))))

================================================================================
Order function multiple fields
================================================================================

order(category asc, name desc)

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (asc_expression
      expression: (identifier))
    (desc_expression
      expression: (identifier))))

================================================================================
Defined function
================================================================================

defined(field)

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (identifier)))

================================================================================
References function
================================================================================

references("doc-123")

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (string
      (double_quoted_string))))

================================================================================
Select function with pairs
================================================================================

select(x > 10 => "high", x > 5 => "medium", "low")

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (pair
      condition: (comparison_expression
        left: (identifier)
        right: (number))
      value: (string
        (double_quoted_string)))
    (pair
      condition: (comparison_expression
        left: (identifier)
        right: (number))
      value: (string
        (double_quoted_string)))
    (string
      (double_quoted_string))))

================================================================================
Length function
================================================================================

length(name)

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (identifier)))

================================================================================
Path function
================================================================================

path("content.body")

--------------------------------------------------------------------------------

(source_file
  (function_call
    name: (identifier)
    (string
      (double_quoted_string))))
